--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "emoji-picker-react": "^4.11.1",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.427.0",
+    "moment": "^2.30.1",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
