--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.7.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "1.0.0",
     "emoji-picker-react": "^4.11.1",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.427.0",
